--- a/Natural_Language_Processing.ipynb
+++ b/Natural_Language_Processing.ipynb
@@ -6,7 +6,7 @@
       "name": "Natural Language Processing.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMIntarFJbOxZdPP7/Wd3kG",
+      "authorship_tag": "ABX9TyPlNSS+gvIguygHFyUN2K7O",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,11 +35,40 @@
       },
       "source": [
         "import nltk\n",
-        "# nltk library is the library used for NLP \n",
-        "nfjzdk"
+        "# nltk library is the library used for NLP "
       ],
-      "execution_count": 1,
+      "execution_count": 6,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 130
+        },
+        "id": "RlHJ53SDtxvs",
+        "outputId": "d42f3fd5-bb5d-4218-cdea-fe777e42ba58"
+      },
+      "source": [
+        "for nltk.tokenize import sent_tokenize, word_tokenize\n",
+        "\n",
+        "sample_text = \"Hello there, how are you? The weather is so nice today.\"\n",
+        "\n",
+        "tokenized_sentences = sent_tokenize(sample_text)\n",
+        "tokenized_sentences"
+      ],
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-9-10100b416cf1>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    for nltk.tokenize import sent_tokenize, word_tokenize\u001b[0m\n\u001b[0m                           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+          ]
+        }
+      ]
     }
   ]
 }
