--- a/Natural_Language_Processing.ipynb
+++ b/Natural_Language_Processing.ipynb
@@ -6,7 +6,7 @@
       "name": "Natural Language Processing.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPlNSS+gvIguygHFyUN2K7O",
+      "authorship_tag": "ABX9TyOdUB7+Yjp1XAWpaPYn5i0T",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -48,7 +48,7 @@
           "height": 130
         },
         "id": "RlHJ53SDtxvs",
-        "outputId": "d42f3fd5-bb5d-4218-cdea-fe777e42ba58"
+        "outputId": "3f811a21-ccb9-40db-ab1e-148358970a5c"
       },
       "source": [
         "for nltk.tokenize import sent_tokenize, word_tokenize\n",
@@ -56,16 +56,19 @@
         "sample_text = \"Hello there, how are you? The weather is so nice today.\"\n",
         "\n",
         "tokenized_sentences = sent_tokenize(sample_text)\n",
-        "tokenized_sentences"
+        "print(tokenized_sentences)\n",
+        "\n",
+        "tokenized_words = word_tokenize(sample_text)\n",
+        "print(tokenized_words)"
       ],
-      "execution_count": 9,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "error",
           "ename": "SyntaxError",
           "evalue": "ignored",
           "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-9-10100b416cf1>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    for nltk.tokenize import sent_tokenize, word_tokenize\u001b[0m\n\u001b[0m                           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-12-7768762d7f14>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    for nltk.tokenize import sent_tokenize, word_tokenize\u001b[0m\n\u001b[0m                           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
           ]
         }
       ]
