--- a/Natural_Language_Processing.ipynb
+++ b/Natural_Language_Processing.ipynb
@@ -6,7 +6,7 @@
       "name": "Natural Language Processing.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyM9TJMc4Oca7BtASHNnXJBn",
+      "authorship_tag": "ABX9TyNW+9rayR3u7WRHvc3smsDe",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -47,62 +47,28 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "RlHJ53SDtxvs",
-        "outputId": "47746af2-1ead-442b-fb8f-36d26944fb0a"
+        "outputId": "8d586f3a-d5ed-4e59-c421-c58a47166697"
       },
       "source": [
         "from nltk import sent_tokenize, word_tokenize\n",
         "\n",
         "sample_text = \"Hello there, how are you? The weather is so nice today.\"\n",
         "\n",
-        "sample_text\n",
+        "tokenized_sentences = sent_tokenize(sample_text)\n",
+        "print(tokenized_sentences)\n",
         "\n",
         "tokenized_words = word_tokenize(sample_text)\n",
         "print(tokenized_words)"
       ],
-      "execution_count": 18,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
+            "['Hello there, how are you?', 'The weather is so nice today.']\n",
             "['Hello', 'there', ',', 'how', 'are', 'you', '?', 'The', 'weather', 'is', 'so', 'nice', 'today', '.']\n"
           ],
           "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "i_7DeluwQa5w",
-        "outputId": "2e69c3e8-5680-4bd5-8342-71acf9cbd1d9"
-      },
-      "source": [
-        "nltk.download('punkt')"
-      ],
-      "execution_count": 17,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "[nltk_data] Downloading package punkt to /root/nltk_data...\n",
-            "[nltk_data]   Unzipping tokenizers/punkt.zip.\n"
-          ],
-          "name": "stdout"
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "True"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 17
         }
       ]
     }
