--- a/Natural_Language_Processing.ipynb
+++ b/Natural_Language_Processing.ipynb
@@ -6,7 +6,7 @@
       "name": "Natural Language Processing.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNW+9rayR3u7WRHvc3smsDe",
+      "authorship_tag": "ABX9TyPhHfhBR4Yg7+ZyuioIUabp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -67,6 +67,33 @@
           "text": [
             "['Hello there, how are you?', 'The weather is so nice today.']\n",
             "['Hello', 'there', ',', 'how', 'are', 'you', '?', 'The', 'weather', 'is', 'so', 'nice', 'today', '.']\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "WKXOZnpISygP",
+        "outputId": "02f0622d-9f39-4ed9-91c3-9964f1a0b135"
+      },
+      "source": [
+        "tokenized_sentences = sent_tokenize(sample_text)\n",
+        "\n",
+        "for sentence in tokenized_sentences:\n",
+        "  print(sentence)"
+      ],
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Hello there, how are you?\n",
+            "The weather is so nice today.\n"
           ],
           "name": "stdout"
         }
