--- a/Natural_Language_Processing.ipynb
+++ b/Natural_Language_Processing.ipynb
@@ -6,7 +6,7 @@
       "name": "Natural Language Processing.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPhHfhBR4Yg7+ZyuioIUabp",
+      "authorship_tag": "ABX9TyP/RP/8vjmOz+/9jqLImGsw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,6 +29,23 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "NzGrdPXqUDHI"
+      },
+      "source": [
+        "#nltk is the library used for NLP \n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "MTMakWD4ps0H"
@@ -39,6 +56,20 @@
       ],
       "execution_count": 10,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "qsknNqlbVCJn"
+      },
+      "source": [
+        "\n",
+        "\n",
+        "1.   **sent_tokenize** is used to split the text into sentences\n",
+        "\n",
+        "2.   **word_tokenize** is used to split the text into words\n",
+        "\n"
+      ]
     },
     {
       "cell_type": "code",
