--- a/Natural_Language_Processing.ipynb
+++ b/Natural_Language_Processing.ipynb
@@ -6,7 +6,7 @@
       "name": "Natural Language Processing.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyP/RP/8vjmOz+/9jqLImGsw",
+      "authorship_tag": "ABX9TyOozYMiq5IcZEu2VnDBCAQ3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -101,6 +101,15 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "8ioaCvbCVth-"
+      },
+      "source": [
+        "**here , we have another way to split a text into words**"
       ]
     },
     {
