--- a/Natural_Language_Processing.ipynb
+++ b/Natural_Language_Processing.ipynb
@@ -6,7 +6,7 @@
       "name": "Natural Language Processing.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOozYMiq5IcZEu2VnDBCAQ3",
+      "authorship_tag": "ABX9TyOliYLfEmi29XbAHvnA6UWK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -119,20 +119,22 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "WKXOZnpISygP",
-        "outputId": "02f0622d-9f39-4ed9-91c3-9964f1a0b135"
+        "outputId": "67795b23-6cab-4616-a7cf-1db8a0e20b9d"
       },
       "source": [
+        "sample_text = \"Hello there Mr. Brown, how are you? The weather is so nice today.\"\n",
+        "\n",
         "tokenized_sentences = sent_tokenize(sample_text)\n",
         "\n",
         "for sentence in tokenized_sentences:\n",
         "  print(sentence)"
       ],
-      "execution_count": 23,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Hello there, how are you?\n",
+            "Hello there Mr. Brown, how are you?\n",
             "The weather is so nice today.\n"
           ],
           "name": "stdout"
