--- a/Natural_Language_Processing.ipynb
+++ b/Natural_Language_Processing.ipynb
@@ -6,7 +6,7 @@
       "name": "Natural Language Processing.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOliYLfEmi29XbAHvnA6UWK",
+      "authorship_tag": "ABX9TyP8NohSWcQqbBTisiASR4Y1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -119,27 +119,78 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "WKXOZnpISygP",
-        "outputId": "67795b23-6cab-4616-a7cf-1db8a0e20b9d"
+        "outputId": "d14c9f2a-cb8a-4ec8-d8f2-3e556aabd4e3"
       },
       "source": [
-        "sample_text = \"Hello there Mr. Brown, how are you? The weather is so nice today.\"\n",
+        "sample_text = \"Hello there Mr. Brown, how are you? The weather is so nice today. I like machine learning.\"\n",
         "\n",
         "tokenized_sentences = sent_tokenize(sample_text)\n",
         "\n",
         "for sentence in tokenized_sentences:\n",
         "  print(sentence)"
       ],
-      "execution_count": 24,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Hello there Mr. Brown, how are you?\n",
-            "The weather is so nice today.\n"
+            "The weather is so nice today.\n",
+            "I like machine learning.\n"
           ],
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Dpdu8-hiXX9l"
+      },
+      "source": [
+        "# Normalization is the process that converts a list of words to a more uniform sequence. This is useful for preparing text for processing in the future."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "J1DyPhhVXWR3",
+        "outputId": "4ce9cf56-ccd0-4765-d912-24390fef69a2"
+      },
+      "source": [
+        "from nltk.stem import PorterStemmer\n",
+        "from nltk import word_tokenize\n",
+        "\n",
+        "ps = PorterStemmer()\n",
+        "print(ps.stem(\"illegal\"))"
+      ],
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "illeg\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "rNwmc6IVXqHk"
+      },
+      "source": [
+        "from nltk.stem import PorterStemmer\n",
+        "from nltk import word_tokenize\n",
+        "\n",
+        "ps = PorterStemmer()\n"
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
