--- a/Natural_Language_Processing.ipynb
+++ b/Natural_Language_Processing.ipynb
@@ -6,7 +6,7 @@
       "name": "Natural Language Processing.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyP8NohSWcQqbBTisiASR4Y1",
+      "authorship_tag": "ABX9TyPuKkcD+1qAsa8xZDmEnoaw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -181,16 +181,34 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "rNwmc6IVXqHk"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rNwmc6IVXqHk",
+        "outputId": "db0693f5-2ccd-4677-b847-2a082dfc7455"
       },
       "source": [
         "from nltk.stem import PorterStemmer\n",
         "from nltk import word_tokenize\n",
         "\n",
-        "ps = PorterStemmer()\n"
+        "ps = PorterStemmer()\n",
+        "sample_words = [\"legal\", \"illegal\", \"legally\", \"leganize\"]\n",
+        "for word in sample_words:\n",
+        "  print(ps.stem(word))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "legal\n",
+            "illeg\n",
+            "legal\n",
+            "legan\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
