--- a/Natural_Language_Processing.ipynb
+++ b/Natural_Language_Processing.ipynb
@@ -6,7 +6,7 @@
       "name": "Natural Language Processing.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPuKkcD+1qAsa8xZDmEnoaw",
+      "authorship_tag": "ABX9TyNKHWtLUozsc4wr3zrfbpZ/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -152,6 +152,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "xOjjwfynaq2D"
+      },
+      "source": [
+        "**The first method is called PorterStemmer**"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "colab": {
@@ -205,6 +214,52 @@
             "illeg\n",
             "legal\n",
             "legan\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "3XwODCzUaMed"
+      },
+      "source": [
+        "**The second method called WordNetLemmatizer is more efficient**\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "uEAlvmrNZ2fe",
+        "outputId": "06bbf876-e508-4cf2-c390-5d3ce94431d2"
+      },
+      "source": [
+        "from nltk.stem import WordNetLemmatizer\n",
+        "\n",
+        "lemmatizer = WordNetLemmatizer()\n",
+        "\n",
+        "print(lemmatizer.lemmatize(\"puppies\"))\n",
+        "\n",
+        "print(lemmatizer.lemmatize(\"monkeys\"))\n",
+        "\n",
+        "print(lemmatizer.lemmatize(\"dices\"))\n",
+        "\n",
+        "print(lemmatizer.lemmatize(\"phones\"))"
+      ],
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "puppy\n",
+            "monkey\n",
+            "dice\n",
+            "phone\n"
           ],
           "name": "stdout"
         }
