--- a/Natural_Language_Processing.ipynb
+++ b/Natural_Language_Processing.ipynb
@@ -6,7 +6,7 @@
       "name": "Natural Language Processing.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNKHWtLUozsc4wr3zrfbpZ/",
+      "authorship_tag": "ABX9TyNdAt2xKzW9omQg15CxASo4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -236,7 +236,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "uEAlvmrNZ2fe",
-        "outputId": "06bbf876-e508-4cf2-c390-5d3ce94431d2"
+        "outputId": "b5e06874-6f37-486f-dffa-2796172cff5d"
       },
       "source": [
         "from nltk.stem import WordNetLemmatizer\n",
@@ -249,9 +249,13 @@
         "\n",
         "print(lemmatizer.lemmatize(\"dices\"))\n",
         "\n",
-        "print(lemmatizer.lemmatize(\"phones\"))"
+        "print(lemmatizer.lemmatize(\"phones\"))\n",
+        "\n",
+        "print(lemmatizer.lemmatize(\"better\"))\n",
+        "# You need to precise the type of the word \"better\"\n",
+        "print(lemmatizer.lemmatize(\"better\", pos = 'a'))"
       ],
-      "execution_count": 40,
+      "execution_count": 43,
       "outputs": [
         {
           "output_type": "stream",
@@ -259,7 +263,9 @@
             "puppy\n",
             "monkey\n",
             "dice\n",
-            "phone\n"
+            "phone\n",
+            "better\n",
+            "good\n"
           ],
           "name": "stdout"
         }
