--- a/Natural_Language_Processing.ipynb
+++ b/Natural_Language_Processing.ipynb
@@ -6,7 +6,7 @@
       "name": "Natural Language Processing.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNdAt2xKzW9omQg15CxASo4",
+      "authorship_tag": "ABX9TyPN6M5GJRjqT8Z6QGYOGfEc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -266,6 +266,47 @@
             "phone\n",
             "better\n",
             "good\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "J2hYo3ded4Br"
+      },
+      "source": [
+        "# Part of speech Tagging"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ZanCL2W4c62i",
+        "outputId": "72f0e710-c329-4bf0-c0ce-0184e8ba2558"
+      },
+      "source": [
+        "from nltk import pos_tag\n",
+        "from nltk import sent_tokenize, word_tokenize\n",
+        "\n",
+        "sample_text = \"I enjoy when I code machine learning algorithms using python language\"\n",
+        "\n",
+        "tokenized_words = word_tokenize(sample_text)\n",
+        "\n",
+        "tag = pos_tag(tokenized_words)\n",
+        "\n",
+        "print(tag)\n"
+      ],
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[('I', 'PRP'), ('enjoy', 'VBP'), ('when', 'WRB'), ('I', 'PRP'), ('code', 'VBP'), ('machine', 'NN'), ('learning', 'NN'), ('algorithms', 'IN'), ('using', 'VBG'), ('python', 'JJ'), ('language', 'NN')]\n"
           ],
           "name": "stdout"
         }
