--- a/Natural_Language_Processing.ipynb
+++ b/Natural_Language_Processing.ipynb
@@ -6,7 +6,8 @@
       "name": "Natural Language Processing.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPN6M5GJRjqT8Z6QGYOGfEc",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyM1Dqc4qiYZrb9brB40DWL+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -311,6 +312,21 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "wLb8hlE5gnES"
+      },
+      "source": [
+        "from nltk import pos_tag\n",
+        "from nltk import sent_tokenize, word_tokenize\n",
+        "\n",
+        "with open(\"2001aspaceodyssey.txt\",\"r\") as corpora:\n",
+        "  sample_text = corpora.read()\n"
+      ],
+      "execution_count": 54,
+      "outputs": []
     }
   ]
 }
