--- a/Natural_Language_Processing.ipynb
+++ b/Natural_Language_Processing.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyM1Dqc4qiYZrb9brB40DWL+",
+      "authorship_tag": "ABX9TyOz9TbOUgRxVmG+2XczV80d",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -323,9 +323,15 @@
         "from nltk import sent_tokenize, word_tokenize\n",
         "\n",
         "with open(\"2001aspaceodyssey.txt\",\"r\") as corpora:\n",
-        "  sample_text = corpora.read()\n"
+        "  sample_text = corpora.read()\n",
+        "\n",
+        "tokenized_sentences = sent_tokenize(sample_text)\n",
+        "for sentence in tokenized_sentences:\n",
+        "  tokenized_words = word_tokenize(sentence)\n",
+        "  tag = pos_tag(tokenized_words)\n",
+        "  #print(tag)"
       ],
-      "execution_count": 54,
+      "execution_count": 57,
       "outputs": []
     }
   ]
