--- a/Natural_Language_Processing.ipynb
+++ b/Natural_Language_Processing.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOz9TbOUgRxVmG+2XczV80d",
+      "authorship_tag": "ABX9TyN/O2fMhKaT1nzJC9wggsPk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -314,6 +314,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "lN-x5qS6h6gd"
+      },
+      "source": [
+        "**We install a file txt called 2001aspaceodyssey.txt and the goal is to apply the previous technics in this txt**"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "wLb8hlE5gnES"
@@ -332,6 +341,26 @@
         "  #print(tag)"
       ],
       "execution_count": 57,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "bfak7DxviVB3"
+      },
+      "source": [
+        "# StopWords\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "poK3lYTAiahW"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
       "outputs": []
     }
   ]
