--- a/Natural_Language_Processing.ipynb
+++ b/Natural_Language_Processing.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMWoplH5DXfKr92l3oxaKFx",
+      "authorship_tag": "ABX9TyPiAFb23bLPNb7UKK9jc4ce",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -378,11 +378,29 @@
         "  if word not in stop_words:\n",
         "    filtered_sentence.append(word)\n",
         "\n",
-        "#print(filtered_sentence)\n",
-        "  \n",
-        "\n"
+        "#print(filtered_sentence)"
       ],
       "execution_count": 22,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "CnNeq_wJ24U_"
+      },
+      "source": [
+        "# Named Entity Recognition : is the task of finding and classifying names in a text"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "7J8xTDKw23yC"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
       "outputs": []
     }
   ]
