--- a/Natural_Language_Processing.ipynb
+++ b/Natural_Language_Processing.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPiAFb23bLPNb7UKK9jc4ce",
+      "authorship_tag": "ABX9TyO834ixikH8HxYam5Sq+cTR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -390,6 +390,29 @@
       },
       "source": [
         "# Named Entity Recognition : is the task of finding and classifying names in a text"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "WUSLqjaP41ep"
+      },
+      "source": [
+        "Example: \n",
+        "\n",
+        "**European authorities fined Google a record $5.1 billion on Wednesday for abusing its power in the mobile phone market and ordered the company to after its practices**\n",
+        "\n",
+        "\n",
+        "\n",
+        "1.   European = Nationality/Region\n",
+        "2.   Google = Organisation\n",
+        "3.   $5.1 billion = Money\n",
+        "4.   Wednesday = Date\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
       ]
     },
     {
