--- a/Natural_Language_Processing.ipynb
+++ b/Natural_Language_Processing.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyO834ixikH8HxYam5Sq+cTR",
+      "authorship_tag": "ABX9TyNPuzKua9y7P9NBPc6AiFwD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -421,9 +421,20 @@
         "id": "7J8xTDKw23yC"
       },
       "source": [
-        ""
+        "from nltk import pos_tag\n",
+        "from nltk import word_tokenize\n",
+        "import nltk\n",
+        "\n",
+        "sample_text = \"Trump economic advisor Larry Kudlow told Fox Bussiness Wednesday tha the administration supports\"\n",
+        "\n",
+        "tokenized_words = word_tokenize(sample_text)\n",
+        "\n",
+        "tag = pos_tag(tokenized_words)\n",
+        "\n",
+        "named_ent = nltk.ne_chunk(tag)\n",
+        "#named_ent.draw()"
       ],
-      "execution_count": null,
+      "execution_count": 31,
       "outputs": []
     }
   ]
