--- a/Natural_Language_Processing.ipynb
+++ b/Natural_Language_Processing.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPjG9CstSGQUGENnLGf0wYM",
+      "authorship_tag": "ABX9TyMo1OC3LLC0MSloSGjGLG3r",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -449,7 +449,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "vccwO15euwYo"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "vccwO15euwYo",
+        "outputId": "c6745700-f8fb-4038-8c76-b972e60353bc"
       },
       "source": [
         "import nltk\n",
@@ -473,10 +477,20 @@
         "  all_words.append(w.lower())\n",
         "\n",
         "all_words = nltk.FreqDist(all_words)\n",
-        "print(all_words.most_commun(10))"
+        "#print(all_words.most_common(10))\n",
+        "#print(len(all_words))\n",
+        "print(all_words[\"brilliant\"])"
       ],
-      "execution_count": 22,
-      "outputs": []
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "176\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
