--- a/Natural_Language_Processing.ipynb
+++ b/Natural_Language_Processing.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMo1OC3LLC0MSloSGjGLG3r",
+      "authorship_tag": "ABX9TyP+QlYeVBCH9BkqyBzIftDM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -447,18 +447,43 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "N6ixbzDS05ci"
+      },
+      "source": [
+        "\n",
+        "\n",
+        "*   We have a set of movies from the library movie_reviews\n",
+        "*   Each movie has its proper ID.\n",
+        "*   There are 1000 movies having postive review\n",
+        "*   There are 1000 movies having negative review\n",
+        "*   From these movies, we need to create a predictif model using classification model\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "For each movie from \n"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "vccwO15euwYo",
-        "outputId": "c6745700-f8fb-4038-8c76-b972e60353bc"
+        "outputId": "e28e75b5-bee5-4d8b-e68c-e3fe7ec7a1e8"
       },
       "source": [
         "import nltk\n",
         "from nltk.corpus import movie_reviews\n",
         "import random\n",
+        "\n",
+        "print(len(movie_reviews.fileids(\"pos\")))\n",
+        "print(len(movie_reviews.fileids(\"neg\")))\n",
         "\n",
         "documents = []\n",
         "for category in movie_reviews.categories():\n",
@@ -479,14 +504,15 @@
         "all_words = nltk.FreqDist(all_words)\n",
         "#print(all_words.most_common(10))\n",
         "#print(len(all_words))\n",
-        "print(all_words[\"brilliant\"])"
+        "#print(all_words[\"brilliant\"])"
       ],
-      "execution_count": 26,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "176\n"
+            "1000\n",
+            "1000\n"
           ],
           "name": "stdout"
         }
