--- a/Natural_Language_Processing.ipynb
+++ b/Natural_Language_Processing.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyP+QlYeVBCH9BkqyBzIftDM",
+      "authorship_tag": "ABX9TyOmskBvcNwUWmndg3OhM9Xp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -459,6 +459,9 @@
         "*   There are 1000 movies having postive review\n",
         "*   There are 1000 movies having negative review\n",
         "*   From these movies, we need to create a predictif model using classification model\n",
+        "*   The total number of samples is 2000\n",
+        "\n",
+        "\n",
         "\n",
         "\n",
         "\n",
@@ -471,19 +474,15 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "vccwO15euwYo",
-        "outputId": "e28e75b5-bee5-4d8b-e68c-e3fe7ec7a1e8"
+        "id": "vccwO15euwYo"
       },
       "source": [
         "import nltk\n",
         "from nltk.corpus import movie_reviews\n",
         "import random\n",
         "\n",
-        "print(len(movie_reviews.fileids(\"pos\")))\n",
-        "print(len(movie_reviews.fileids(\"neg\")))\n",
+        "#print(len(movie_reviews.fileids(\"pos\")))\n",
+        "#print(len(movie_reviews.fileids(\"neg\")))\n",
         "\n",
         "documents = []\n",
         "for category in movie_reviews.categories():\n",
@@ -495,6 +494,7 @@
         "    document = (review_word_list, category)\n",
         "    documents.append(document)\n",
         "#print(documents[0])\n",
+        "#print(len(documents))\n",
         "random.shuffle(documents)\n",
         "\n",
         "all_words = []\n",
@@ -506,17 +506,8 @@
         "#print(len(all_words))\n",
         "#print(all_words[\"brilliant\"])"
       ],
-      "execution_count": 34,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "1000\n",
-            "1000\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 36,
+      "outputs": []
     }
   ]
 }
