--- a/Natural_Language_Processing.ipynb
+++ b/Natural_Language_Processing.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOmskBvcNwUWmndg3OhM9Xp",
+      "authorship_tag": "ABX9TyO1FmcD0bjhmIkNXADBAKa6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -460,15 +460,7 @@
         "*   There are 1000 movies having negative review\n",
         "*   From these movies, we need to create a predictif model using classification model\n",
         "*   The total number of samples is 2000\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "For each movie from \n"
+        "\n"
       ]
     },
     {
@@ -501,12 +493,82 @@
         "for w in movie_reviews.words():\n",
         "  all_words.append(w.lower())\n",
         "\n",
+        "#print(movie_reviews.words())\n",
+        "\n",
         "all_words = nltk.FreqDist(all_words)\n",
         "#print(all_words.most_common(10))\n",
         "#print(len(all_words))\n",
-        "#print(all_words[\"brilliant\"])"
+        "#print(all_words[\"brilliant\"])\n",
+        "\n",
+        "word_features = []\n",
+        "for common_word in all_words.most_common(3000):\n",
+        "  word_features.append(common_word[0])\n",
+        "\n",
+        "def find_features(feature_doc):\n",
+        "  words = set(feature_doc)\n",
+        "  features = {}\n",
+        "  for word in word_features:\n",
+        "    is_feature_in_words = word in words\n",
+        "    features[word] = is_feature_in_words\n",
+        "  return features\n",
+        "\n",
+        "#print(find_features(movie_reviews.words('neg/cv000_29416.txt')))\n",
+        "\n",
+        "featuresets = []\n",
+        "\n",
+        "for(review, category) in documents:\n",
+        "  feature = (find_features(review), category)\n",
+        "  featuresets.append(feature)\n",
+        "\n"
       ],
-      "execution_count": 36,
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "s2QnizT7QnYn",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "636c0147-441f-42fa-9e56-146eb083d61b"
+      },
+      "source": [
+        "nltk.download('movie_reviews')"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[nltk_data] Downloading package movie_reviews to /root/nltk_data...\n",
+            "[nltk_data]   Unzipping corpora/movie_reviews.zip.\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 3
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "xlpF-nahQnR9"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
       "outputs": []
     }
   ]
