--- a/Python_Courses.ipynb
+++ b/Python_Courses.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Python Courses.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyP9rTeXIkjdoy/2boWyrEMV",
+      "authorship_tag": "ABX9TyPPHlwRwzOfdCqT769PwR6T",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,12 +28,27 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "O9snkeXyL40z"
+      },
+      "source": [
+        "#Programmer une calculatrice\n",
+        "1.   Addition\n",
+        "2.   Soustraction\n",
+        "3.   Multiplication\n",
+        "4.   Division\n",
+        "5.   Power\n",
+        "\n"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "yR9No2KwKfoU"
       },
       "source": [
-        "import numpy"
+        ""
       ],
       "execution_count": null,
       "outputs": []
