--- a/Python_Courses.ipynb
+++ b/Python_Courses.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Python Courses.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPPHlwRwzOfdCqT769PwR6T",
+      "authorship_tag": "ABX9TyOXnAGpILV4fX9D1RT5u7Rq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -26,6 +26,56 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/FadyD123/NLP/blob/main/Python_Courses.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "rVqnaIJnPAIV"
+      },
+      "source": [
+        "# For loop\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "llrk7FuTO15Y",
+        "outputId": "64b60d88-a3cf-4082-f750-0d3f7e94759f"
+      },
+      "source": [
+        "# For loop\n",
+        "sum = 0\n",
+        "n = input(\"Donner n : \") # n is a string\n",
+        "n = int(n) # n will become an integer\n",
+        "for i in range(1,n+1):\n",
+        " sum = sum + i\n",
+        "print(sum)"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Donner n : 100000\n",
+            "5000050000\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "86dD04BLUU4v"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
