--- a/Python_Courses.ipynb
+++ b/Python_Courses.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Python Courses.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOXnAGpILV4fX9D1RT5u7Rq",
+      "authorship_tag": "ABX9TyP/NYtE8q7PHicYMCT4bWJo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,6 +37,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "wSJ0aI56Uozr"
+      },
+      "source": [
+        " *Sum from 1 to n*"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "colab": {
@@ -64,6 +73,15 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "fg-U5tVqU_v3"
+      },
+      "source": [
+        ""
       ]
     },
     {
