--- a/Python_Courses.ipynb
+++ b/Python_Courses.ipynb
@@ -6,7 +6,7 @@
       "name": "Python Courses.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPvebyvcxy9CTcGM7BniGzj",
+      "authorship_tag": "ABX9TyP+iTfSaQBn9HMYJWYtC5V8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -446,6 +446,15 @@
             "needs_background": "light"
           }
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "K6rofH7dpbcL"
+      },
+      "source": [
+        "#Arctan function"
       ]
     },
     {
