--- a/Python_Courses.ipynb
+++ b/Python_Courses.ipynb
@@ -6,7 +6,7 @@
       "name": "Python Courses.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyP+iTfSaQBn9HMYJWYtC5V8",
+      "authorship_tag": "ABX9TyP6ZL0ex8cpwFhgIrtWJWNS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -538,13 +538,46 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "yR9No2KwKfoU"
+        "id": "yR9No2KwKfoU",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "e78fa08f-2626-446b-90cb-cb3580df24d6"
       },
       "source": [
-        ""
+        "a = input(\"Give me a : \")\n",
+        "a = float(a)\n",
+        "\n",
+        "b = input(\"Give me b : \")\n",
+        "b = float(b)\n",
+        "\n",
+        "op = input(\"Give me the operatation: \")\n",
+        "\n",
+        "if op == \"+\":\n",
+        "  print(a+b)\n",
+        "elif op == \"-\":\n",
+        "  print(a-b)\n",
+        "elif op == \"x\":\n",
+        "  print(a*b)\n",
+        "elif op == \"/\":\n",
+        "  print(a/b)\n",
+        "elif op == \"^\":\n",
+        "  print(a**b)\n",
+        "else: print(\"No find operation\")"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Give me a : 20\n",
+            "Give me b : 10\n",
+            "Give me the operatation: -\n",
+            "10.0\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
