--- a/Python_Courses.ipynb
+++ b/Python_Courses.ipynb
@@ -6,7 +6,7 @@
       "name": "Python Courses.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyP6ZL0ex8cpwFhgIrtWJWNS",
+      "authorship_tag": "ABX9TyO84aXv8OYfs9K3Xc5JPyFN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -451,10 +451,10 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "K6rofH7dpbcL"
+        "id": "cdVagCc-iWay"
       },
       "source": [
-        "#Arctan function"
+        "# Artan Function"
       ]
     },
     {
@@ -464,8 +464,8 @@
           "base_uri": "https://localhost:8080/",
           "height": 333
         },
-        "id": "sTyzLc1WnxB9",
-        "outputId": "b9764030-a040-4a32-a293-9de2b541a793"
+        "id": "6H7-kg27iMRL",
+        "outputId": "4d3a8afc-2377-4b46-8b57-c26a16223a29"
       },
       "source": [
         "import matplotlib.pyplot as plt\n",
@@ -493,7 +493,7 @@
         "print(\"real arctan of x = \", math.atan(x))\n",
         "print(\"Pi/4 = \", math.pi/4)"
       ],
-      "execution_count": 38,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -542,7 +542,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e78fa08f-2626-446b-90cb-cb3580df24d6"
+        "outputId": "b9167458-081c-4d21-e5f4-49b854f9c558"
       },
       "source": [
         "a = input(\"Give me a : \")\n",
@@ -565,15 +565,80 @@
         "  print(a**b)\n",
         "else: print(\"No find operation\")"
       ],
-      "execution_count": 42,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Give me a : 20\n",
-            "Give me b : 10\n",
-            "Give me the operatation: -\n",
-            "10.0\n"
+            "Give me a : 25\n",
+            "Give me b : 60\n",
+            "Give me the operatation: +\n",
+            "85.0\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "IwgZSNJlidMO"
+      },
+      "source": [
+        "# Fibonacci Series"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0ZQ2GdSbihox",
+        "outputId": "b65042a9-d7c4-45fd-d822-465d3a558b1e"
+      },
+      "source": [
+        "# Program to display the Fibonacci sequence up to n-th term\n",
+        "\n",
+        "nterms = int(input(\"How many terms? \"))\n",
+        "\n",
+        "# first two terms\n",
+        "n1, n2 = 0, 1\n",
+        "count = 0\n",
+        "\n",
+        "# check if the number of terms is valid\n",
+        "if nterms <= 0:\n",
+        "   print(\"Please enter a positive integer\")\n",
+        "elif nterms == 1:\n",
+        "   print(\"Fibonacci sequence upto\",nterms,\":\")\n",
+        "   print(n1)\n",
+        "else:\n",
+        "   print(\"Fibonacci sequence:\")\n",
+        "   while count < nterms:\n",
+        "       print(n1)\n",
+        "       nth = n1 + n2\n",
+        "       # update values\n",
+        "       n1 = n2\n",
+        "       n2 = nth\n",
+        "       count += 1"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "How many terms? 10\n",
+            "Fibonacci sequence:\n",
+            "0\n",
+            "1\n",
+            "1\n",
+            "2\n",
+            "3\n",
+            "5\n",
+            "8\n",
+            "13\n",
+            "21\n",
+            "34\n"
           ],
           "name": "stdout"
         }
