--- a/Python_Courses.ipynb
+++ b/Python_Courses.ipynb
@@ -6,7 +6,7 @@
       "name": "Python Courses.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyO84aXv8OYfs9K3Xc5JPyFN",
+      "authorship_tag": "ABX9TyOWLrx1zPPlqkbzOt+dzqG6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -639,6 +639,64 @@
             "13\n",
             "21\n",
             "34\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ZOPYUeqFi2P7"
+      },
+      "source": [
+        "# Prime Number"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "sA6YTpuki13v",
+        "outputId": "930aa387-375c-400c-9b57-0179e60134f4"
+      },
+      "source": [
+        "# Program to check if a number is prime or not\n",
+        "\n",
+        "num = input(\"Give me a number : \")\n",
+        "num = int(num)\n",
+        "\n",
+        "# To take input from the user\n",
+        "#num = int(input(\"Enter a number: \"))\n",
+        "\n",
+        "# define a flag variable\n",
+        "flag = False\n",
+        "\n",
+        "# prime numbers are greater than 1\n",
+        "if num > 1:\n",
+        "    # check for factors\n",
+        "    for i in range(2, num):\n",
+        "        if (num % i) == 0:\n",
+        "            # if factor is found, set flag to True\n",
+        "            flag = True\n",
+        "            # break out of loop\n",
+        "            break\n",
+        "\n",
+        "# check if flag is True\n",
+        "if flag:\n",
+        "    print(num, \"is not a prime number\")\n",
+        "else:\n",
+        "    print(num, \"is a prime number\")"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Give me a number : 45\n",
+            "45 is not a prime number\n"
           ],
           "name": "stdout"
         }
